회원가입 약관 화면 추가

--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -39,6 +39,12 @@ ul ul {
 	height: 100%;
 	display : inline-block;
 }
+input + label{
+	cursor : pointer;
+}
+label{
+	margin-bottom : 0;
+}
 .flex{
 	display : flex;
 }
