--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1738,17 +1738,120 @@ header{
 .box_input .name_input{
 	margin-bottom : 20px;
 }
-.box_input .id_output{
+.findId_box .id_output{
 	margin-bottom : 20px;
 	font-size : 20px;
 	font-family: 'twayair';
 	display : none;
 }
-.box_input .id_output.active{
+.findId_box .id_output.active{
 	display : block;
 }
-/* 아이디 찾기 화면 시작*/
+/* 아이디 찾기 화면 끝*/
 
+/* 패스워드 찾기 화면 시작*/
+
+.findPw_box{
+	width: 100%;
+}
+.findPw_box form {
+	width : 100%;
+	display : flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+.findPw_box .buttonBox{
+	justify-content: center;
+}
+.findPw_box .birth_input {
+	margin-bottom : 20px;
+}
+.login_container, .findPw_container {
+    height: 45%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    margin: 0 auto;
+    position: relative;
+}
+.findPw_container::before {
+    content: "";
+    width: 65%;
+    border-top: 2px solid black;
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.findPw_container::after {
+    content: "";
+    width: 65%;
+    border-top: 2px solid black;
+    position: absolute;
+    top: 6%;
+    left: 50%;
+    transform: translateX(-50%)
+}
+
+@media (max-width : 1200px){
+	.findPw_container::after
+	{
+		width : 85%;
+	}
+	.findPw_container::before
+	{
+		width : 85%;
+	}
+}
+@media (max-width : 900px){
+	.findPw_container::after
+	{
+		width : 95%;
+	}
+	.findPw_container::before
+	{
+		width : 95%;
+	}
+}
+@media (max-width : 780px){
+	.findPw_container::after
+	{
+		width : 100%;
+	}
+	.findPw_container::before
+	{
+		width : 100%;
+	}
+}
+
+@media (max-width:450px) and (max-height : 900px) and (min-height : 800px){
+	.findPw_container::after
+	{
+		top : 1%;
+	}
+	.findPw_container::before
+	{
+		bottom : 5%;
+	}
+	.findPw_container{
+		top: 10%;	
+	}
+}
+@media (max-height : 800px){
+	.findPw_container
+	{
+		height : 55%;
+	}
+}
+@media (max-height : 700px){
+	.findPw_container::after
+	{
+		top : 6%;
+	}
+}
+/* 패스워드 찾기 화면 끝 */
 /* 푸터 시작 */
 .footer{
 	height : 90px;
